# templi-templates

./: README.md
cmake_c++_basic_aur_library/: CMakeLists.txt  PROJECT_NAMEConfig.hpp.in  README.md  templi.json
cmake_c++_basic_aur_library/.github/workflows/: aur-publish.yml
cmake_c++_basic_aur_library/PKGBUILD/lib/: CMakeLists.txt
cmake_c++_basic_aur_library/include/PROJECT_NAME/: PROJECT_NAME.hpp
cmake_c++_basic_aur_library/release_config/: create_release.sh
cmake_c++_basic_aur_library/src/: CMakeLists.txt
cmake_c++_basic_aur_library/src/lib/: CMakeLists.txt  PROJECT_NAME.cpp
fjpa/: README.md  pom.xml  templi.json
fjpa/.templi-scripts/: rename-package.sh
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/: FJPARepository.java  Main.java  QueryGenerator.java  QueryTemplate.java  ReflectEntity.java  ResultSetMapper.java  StatementWrapper.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/annotation/: Column.java  Entity.java  Id.java  Relation.java  ValueGetter.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/fjpa/: FJPARepository.java  ReflectEntity.java  StatementWrapper.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/fjpa/annotation/: Column.java  Entity.java  Id.java  Relation.java  ValueGetter.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/fjpa/model/: ChildGenerator.java  InnerRelation.java  Order.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/fjpa/utils/: Utils.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/model/: ChildGenerator.java  FilterValues.java  InnerRelation.java  Order.java  ReflectAttribute.java
fjpa/src/main/java/PACKAGE_GROUP_1/PACKAGE_GROUP_2/PACKAGE_GROUP_3/utils/: Utils.java
fjpa/src/main/java/{{PACKAGE_GROUP_1}}/{{PACKAGE_GROUP_2}}/{{PACKAGE_GROUP_3}}/fjpa/: Main.java  QueryGenerator.java  QueryTemplate.java  ResultSetMapper.java
fjpa/src/main/java/{{PACKAGE_GROUP_1}}/{{PACKAGE_GROUP_2}}/{{PACKAGE_GROUP_3}}/fjpa/model/: FilterValues.java  ReflectAttribute.java
libc++/: CMakeLists.txt  License.txt  README.md  install.sh  templi.json
libc++/.github/workflows/: aur-publish.yml  ci.yml
libc++/.templates/: PKGBUILD.in  create-release.sh.in  install.sh.in
libc++/.templi-scripts/: rename-all.sh
libc++/sources/: CMakeLists.txt
nestjs/: .env.template  README.md  package-lock.json  package.json  templi.json
nestjs/.github/workflows/: ci.yml
nestjs/docs/: api.yml
nestjs/src/: app.module.ts  main.ts
nestjs/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
nestjs/src/auth/decorator/: authenticated.decorator.ts
nestjs/src/auth/guards/: index.ts
nestjs/src/auth/model/: signin.ts  signup.ts  whoami.ts
nestjs/src/model/: index.ts  role.enum.ts  user.entity.ts
nestjs/src/module/: health.module.ts  index.ts  user.module.ts
nestjs/src/module/database/: database.module.ts
nestjs/src/rest/controller/: health.controller.ts  user.controller.ts
nestjs/src/rest/decorator/: pagination.decorator.ts
nestjs/src/rest/mapper/: user.mapper.ts
nestjs/src/rest/model/: create-user.ts  index.ts  user.ts
nestjs/src/service/: health.service.ts  index.ts  user.service.ts
nestjs/src/service/utils/: create-pagination.ts  find-by-criteria.ts
poja-cli/: poja-cli.sh  templi.json
